@@ -8,10 +8,6 @@ import uk.ac.ebi.protvar.client.EmbeddingClient;
 import java.util.List;
 import java.util.Optional;
 
-/**
- * Service for embedding generation operations.
- * Provides business logic layer for embedding functionality.
- */
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -19,24 +15,14 @@ public class EmbeddingService {
 
     private final EmbeddingClient embeddingClient;
 
-    /**
-     * Generate embedding for the given text.
-     * @param text Input text
-     * @return Optional containing embedding vector
-     */
-    public Optional<List<Number>> generateEmbedding(String text) {
-        if (text == null || text.trim().isEmpty()) {
+    public Optional<List<Number>> generateEmbedding(String text, String model) {
+        if (text == null || text.isBlank()) {
             log.warn("Attempted to generate embedding for empty text");
             return Optional.empty();
         }
-
-        return embeddingClient.getEmbedding(text);
+        return embeddingClient.getEmbedding(text, model);
     }
 
-    /**
-     * Check if the embedding service is available.
-     * @return true if service is healthy
-     */
     public boolean isServiceAvailable() {
         return embeddingClient.isHealthy();
     }
